force-app/main/default/objects/property_account__c/property_account__c.object-meta.xml
<CustomObject>
    <label>物件/得意先</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>物件/得意先名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>