force-app/main/default/objects/property_account__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>得意先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>物件/得意先</relationshipLabel>
    <relationshipName>property</relationshipName>
    <type>Lookup</type>
</CustomField>