force-app/main/default/objects/property_account__c/fields/account_type__c.field-meta.xml
<CustomField>
    <fullName>account_type__c</fullName>
    <label>得意先種別</label>
    <length>100</length>
    <type>Text</type>
</CustomField>