force-app/main/default/objects/property_account__c/fields/ChangeStatusDate__c.field-meta.xml
<CustomField>
    <fullName>ChangeStatusDate__c</fullName>
    <label>物件ステータス変更日</label>
    <type>Date</type>
</CustomField>