force-app/main/default/objects/property_account__c/fields/compDateNextProperty__c.field-meta.xml
<CustomField>
    <fullName>compDateNextProperty__c</fullName>
    <label>次回担当物件-竣工日</label>
    <type>Date</type>
</CustomField>