force-app/main/default/objects/property_account__c/fields/construction1__c.field-meta.xml
<CustomField>
    <fullName>construction1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>工事店1</label>
    <referenceTo>property_account__c</referenceTo>
    <relationshipLabel>物件/得意先</relationshipLabel>
    <relationshipName>property_account1</relationshipName>
    <type>Lookup</type>
</CustomField>