force-app/main/default/objects/property_account__c/fields/construction1NAME__c.field-meta.xml
<CustomField>
    <fullName>construction1NAME__c</fullName>
    <formula>construction1__r.Account__r.Name</formula>
    <label>工事店1名称</label>
    <type>Text</type>
</CustomField>