force-app/main/default/objects/property_account__c/fields/construction2__c.field-meta.xml
<CustomField>
    <fullName>construction2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>工事店2</label>
    <referenceTo>property_account__c</referenceTo>
    <relationshipLabel>物件/得意先 (工事店2)</relationshipLabel>
    <relationshipName>property_account2</relationshipName>
    <type>Lookup</type>
</CustomField>