force-app/main/default/objects/property_account__c/fields/construction3__c.field-meta.xml
<CustomField>
    <fullName>construction3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>工事店3</label>
    <referenceTo>property_account__c</referenceTo>
    <relationshipLabel>物件/得意先 (工事店3)</relationshipLabel>
    <relationshipName>property_account3</relationshipName>
    <type>Lookup</type>
</CustomField>