force-app/main/default/objects/property_account__c/fields/construction3NAME__c.field-meta.xml
<CustomField>
    <fullName>construction3NAME__c</fullName>
    <formula>construction3__r.Account__r.Name</formula>
    <label>工事店3名称</label>
    <type>Text</type>
</CustomField>