force-app/main/default/objects/property_account__c/fields/construction4NAME__c.field-meta.xml
<CustomField>
    <fullName>construction4NAME__c</fullName>
    <formula>construction4__r.Account__r.Name</formula>
    <label>工事店4名称</label>
    <type>Text</type>
</CustomField>