force-app/main/default/objects/property_account__c/fields/CS_ImportantProperty__c.field-meta.xml
<CustomField>
    <fullName>CS_ImportantProperty__c</fullName>
    <formula>OR (property__r.zyutyusaki__r.CS_ImportantCon__c ,  property__r.zouhougen__r.CS_ImportantInfo__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>重要物件</label>
    <type>Checkbox</type>
</CustomField>