force-app/main/default/objects/property_account__c/fields/genbatantousya2__c.field-meta.xml
<CustomField>
    <fullName>genbatantousya2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>得意先担当者2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>物件/得意先 (得意先担当者2)</relationshipLabel>
    <relationshipName>genbatantousya2</relationshipName>
    <type>Lookup</type>
</CustomField>