force-app/main/default/objects/property_account__c/fields/genbatantousya__c.field-meta.xml
<CustomField>
    <fullName>genbatantousya__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>*得意先担当者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>物件/得意先</relationshipLabel>
    <relationshipName>genbatantousya</relationshipName>
    <type>Lookup</type>
</CustomField>