force-app/main/default/objects/property_account__c/fields/kankoubi__c.field-meta.xml
<CustomField>
    <fullName>kankoubi__c</fullName>
    <label>完工日</label>
    <type>Date</type>
</CustomField>