force-app/main/default/objects/property_account__c/fields/Memo__c.field-meta.xml
<CustomField>
    <fullName>Memo__c</fullName>
    <label>ネクストアクション等</label>
    <type>TextArea</type>
</CustomField>