force-app/main/default/objects/property_account__c/fields/nextProperty__c.field-meta.xml
<CustomField>
    <fullName>nextProperty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>次回担当物件</label>
    <referenceTo>property__c</referenceTo>
    <relationshipLabel>物件/得意先 (次回担当物件)</relationshipLabel>
    <relationshipName>property_account_nextProperty</relationshipName>
    <type>Lookup</type>
</CustomField>