force-app/main/default/objects/property_account__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <label>№</label>
    <length>10</length>
    <type>Text</type>
</CustomField>