force-app/main/default/objects/property_account__c/fields/Point__c.field-meta.xml
<CustomField>
    <fullName>Point__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ポイント</label>
    <referenceTo>Point__c</referenceTo>
    <relationshipLabel>物件/得意先</relationshipLabel>
    <relationshipName>Poin1ss</relationshipName>
    <type>Lookup</type>
</CustomField>