force-app/main/default/objects/property_account__c/fields/property__c.field-meta.xml
<CustomField>
    <fullName>property__c</fullName>
    <label>物件マスタ</label>
    <referenceTo>property__c</referenceTo>
    <relationshipLabel>物件/得意先</relationshipLabel>
    <relationshipName>property1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>