force-app/main/default/objects/property_account__c/fields/Status_stagnation_date__c.field-meta.xml
<CustomField>
    <fullName>Status_stagnation_date__c</fullName>
    <formula>TODAY()  -  ChangeStatusDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ステータス停滞日</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>