force-app/main/default/objects/property_account__c/fields/targetDateNextProperty__c.field-meta.xml
<CustomField>
    <fullName>targetDateNextProperty__c</fullName>
    <label>次回担当物件-着工日</label>
    <type>Date</type>
</CustomField>