force-app/main/default/objects/property_account__c/fields/Typeofwork__c.field-meta.xml
<CustomField>
    <fullName>Typeofwork__c</fullName>
    <label>工種</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>軽鉄ボード</fullName>
            </value>
            <value>
                <fullName>壁装仕上</fullName>
            </value>
            <value>
                <fullName>木質床</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>