force-app/main/default/objects/property_account__c/fields/zyutyukingaku__c.field-meta.xml
<CustomField>
    <fullName>zyutyukingaku__c</fullName>
    <label>受注金額(千円)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>