force-app/main/default/objects/property_account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>genbatantousya__c</columns>
    <columns>genbatantousya2__c</columns>
    <columns>targetDateNextProperty__c</columns>
    <columns>nextProperty__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>account_type__c</columns>
    <columns>Account__c</columns>
    <columns>property__c</columns>
    <columns>construction1__c</columns>
    <columns>construction2__c</columns>
    <columns>construction3__c</columns>
    <columns>construction4__c</columns>
    <columns>construction5__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>